[gd_scene load_steps=4 format=3 uid="uid://qdqs7qkxu7j1"]

[ext_resource type="Script" path="res://src/in_game_gui.gd" id="1_coytm"]
[ext_resource type="PackedScene" uid="uid://bbgi5hfe1qdm0" path="res://src/player_gui.tscn" id="1_ilxe0"]
[ext_resource type="PackedScene" uid="uid://cr1cc4gg313og" path="res://src/shop.tscn" id="3_kcr6l"]

[node name="inGameGui" type="CanvasLayer"]
script = ExtResource("1_coytm")

[node name="playerGUI" parent="." instance=ExtResource("1_ilxe0")]

[node name="Button" type="Button" parent="."]
offset_right = 181.0
offset_bottom = 82.0
text = "Click to generate new dungeon"

[node name="Shop" parent="." instance=ExtResource("3_kcr6l")]

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="dialogue_end" from="Shop" to="." method="_on_shop_dialogue_end"]
[connection signal="player_gain_item" from="Shop" to="." method="_on_shop_player_gain_item"]
[connection signal="player_gain_passive" from="Shop" to="." method="_on_shop_player_gain_passive"]
[connection signal="player_gain_spell" from="Shop" to="." method="_on_shop_player_gain_spell"]
